fixes bug 180494 "apparent code error in netwerk/dns/src/nsDnsService.cpp" r=bbaetz sr=bzbarsky